# RDXK5_ROS2

./: README_cn.md
src/: README.md
src/camera_ws/src/camera_bringup/: package.xml  setup.cfg  setup.py
src/camera_ws/src/camera_bringup/config/: params.yaml
src/camera_ws/src/camera_bringup/launch/: azhsxf_camera.launch.py  demo.launch.py
src/mic_deepseek/: tts.pcm
src/mic_deepseek/src/deepseek_chat_service/: package.xml  setup.cfg  setup.py
src/mic_deepseek/src/deepseek_chat_service/deepseek_chat_service/: deepseek.py  extract_location_srv_node.py
src/mic_deepseek/src/deepseek_interfaces/: CMakeLists.txt  package.xml
src/mic_deepseek/src/deepseek_interfaces/srv/: DeepseekChat.srv
src/mic_deepseek/src/mic_msg/: CMakeLists.txt  package.xml
src/mic_deepseek/src/mic_ros2/: CMakeLists.txt  package.xml
src/mic_deepseek/src/mic_ros2/include/: mic.h  user_interface.h
src/mic_deepseek/src/mic_ros2/launch/: mic_init.launch.py
src/mic_deepseek/src/mic_ros2/msc/14568787b9f27199e9ec950aa0af565e/: cfg.ldata
src/mic_deepseek/src/mic_ros2/src/: mic.cpp  ros2_service.cpp
src/mic_deepseek/src/wheeltec_aiui/: CMakeLists.txt  package.xml
src/mic_deepseek/src/wheeltec_aiui/AIUI/cfg/: aiui.cfg
src/mic_deepseek/src/wheeltec_aiui/include/: Processor.h
src/mic_deepseek/src/wheeltec_aiui/launch/: aiui_start.launch.py
src/mic_deepseek/src/wheeltec_aiui/src/: Processor.cpp
src/mission_control/src/mission_orchestrator/: CMakeLists.txt  package.xml
src/mission_control/src/mission_orchestrator/config/: room_location.yaml
src/mission_control/src/mission_orchestrator/include/mission_orchestrator/: room_location_loader.hpp
src/mission_control/src/mission_orchestrator/launch/: robot_mission_orchestration.launch.py
src/mission_control/src/mission_orchestrator/src/: mission_orchestrator_node.cpp  room_location_loader.cpp
src/robot_elevator/src/elevator_interfaces/: CMakeLists.txt  package.xml
src/robot_elevator/src/elevator_interfaces/action/: GoStraight.action
src/robot_elevator/src/go_straight/: package.xml  setup.cfg  setup.py
src/robot_elevator/src/go_straight/go_straight/: go_straight_act_node.py
src/serial_ws/src/stm32_map/: CMakeLists.txt  package.xml
src/serial_ws/src/stm32_map/include/stm32_map/: map_loader.hpp
src/serial_ws/src/stm32_map/maps/: floor4.pgm  floor4.yaml  floor6.pgm  floor6.yaml
src/serial_ws/src/stm32_map/src/: map_switch_node.cpp  stm32_serial_node.cpp  test_map_node.cpp
src/serial_ws/src/stm32_map/test/: test_serial.py
src/yolov5_detect/src/yolo_detector/: CMakeLists.txt  package.xml
src/yolov5_detect/src/yolo_detector/include/yolo_detector/: bpu_detect.hpp
src/yolov5_detect/src/yolo_detector/launch/: back_camera_and_yolo.launch.py  former_camera_and_yolo.launch.py
src/yolov5_detect/src/yolo_detector/src/: back_yolo_node.cpp  bpu_detect.cpp  former_yolo_node.cpp
src/yolov5_detect/src/yolo_msgs/: CMakeLists.txt  package.xml
src/yolov5_detect/src/yolo_msgs/msg/: BoundingBox.msg  Detection.msg
